Исправлены ошибки и замечания